--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,8 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="7" />
-
+	<uses-permission android:name="android.permission.INTERNET" />
+	
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
@@ -19,6 +20,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".EntryActivity"></activity>
+        
+       <!--  <activity android:name=".HelloGoogleMaps" android:label="@string/app_name"
+     android:theme="@android:style/Theme.NoTitleBar"> -->
+        
+         <!-- <uses-library android:name="com.google.android.maps" android:required="true"/> -->
     </application>
 
 </manifest>
